tests/NormalTests/paczka1/fuzzy1/41572304.err
Error in line 7: cGVvhwJMr SG61 82,1
Error in line 11: Hy5jjJT34OZ S361 74,6
Error in line 17: Hy5jjJT34OZ A616 95,8
Error in line 24: Hy5jjJT34OZ A723 8
Error in line 25: ,3
Error in line 8: cGVvhwJMr S361 194,6
Error in line 30: HjRfRIwzHnr A616 79,2
Error in line 32: HjRfRIwzHnr A723 36,2
Error in line 33: HjRfRIwzHnr A616 42,4
Error in line 21: DbLvmgt A975 212,4
Error in line 38: DbLvmgt A723 93,3
